Fixed mobile logo issue where it would get squished

--- a/src/userCSS.css
+++ b/src/userCSS.css
@@ -12,7 +12,6 @@
   --nav-link-hover-background-color: none;
   --nav-background-color: none;
   --nav-height: 150px;
-  --nav-logo-width: 125px;
   --nav-logo-font-size: 16px;
 
   /* Mobile Nav Settings  */
